# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-02-09
# --------------------------------------------------------------------
# + finally fixed the bug with the single/multi hit selection criteria
#   It was because the primVolumeName cut was messing stuff up.


# 2017-02-06
# --------------------------------------------------------------------
# + add TCut('1') for simulation as default setting,
#   it works! (no more if-else)
# + add TCut('1') for data as default setting,
#   it works! (no more if-else)
# + added simple data cuts for 'all-hits', 'single-hits', and 'multi-hits'
# + added option 'chan' to force a type of data selection


# 2017-02-02
# --------------------------------------------------------------------
# ~ add new rootfile names to backgrounds40
# ~ generated the new build40 MC rootfiles


# 2017-02-01
# --------------------------------------------------------------------
# ~ backgrounds40.txt now uses V00.02.03 data
# ~ move to V00.02.03 processing of the 1546 data
# + revamp of join40.py for new v40 format
# + add force reuse options in funcs40.py
# + reuse rootfiles works now in funcs40.py
# + forgot to add "from copy import deepcopy" in funcs40.py - oops
# + many tweaks to get "reuse" working
# + add scaleBkgs40() in funcs40.py
# + add scaleSigs40() in funcs40.py
# + add info{} to data,bkgs,sigs in funcs40.py# 
# + mcfile is now a top level option
# - remove the [bp] option, I know it should be 1


# 2017-01-31
# --------------------------------------------------------------------
# - remove the [np] option, I know it should be 1
# ~ fixed a bunch of [key] bugs
# + add data[key]['runtime'] to getData32() in funcs32.py
# ~ tweaked 40-single-hit.py for new functions